--- a/starter-kit.yaml
+++ b/starter-kit.yaml
@@ -25,6 +25,7 @@ export_paths:
   - public/assets/logo.svg
   - public/css
   - public/js
+  - public/fonts
   - package.json
   - tailwind.config.js
   - webpack.mix.js
