Added responsive image partial, switched all images to responsive

--- a/starter-kit.yaml
+++ b/starter-kit.yaml
@@ -12,6 +12,7 @@ export_paths:
   - content/collections/pages/home.md
   - content/collections/pages/contact.md
   - config/statamic/cp.php
+  - config/statamic/assets.php
   - resources/forms
   - resources/fieldsets
   - resources/blueprints
