--- a/package.json
+++ b/package.json
@@ -1,32 +1,23 @@
 {
     "private": true,
     "scripts": {
-        "dev": "mix",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "mix --production",
-        "production": "mix --production"
+        "dev": "vite",
+        "build": "vite build"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.5.2",
-        "@tailwindcss/typography": "^0.5.2",
-        "autoprefixer": "^10.4.7",
-        "browser-sync": "^2.27.10",
-        "browser-sync-webpack-plugin": "^2.3.0",
+        "@fontsource/mulish": "^4.5.14",
+        "@tailwindcss/forms": "^0.5.3",
+        "@tailwindcss/typography": "^0.5.9",
+        "autoprefixer": "^10.4.13",
         "cross-env": "^7.0.3",
-        "laravel-mix": "^6.0.43",
-        "postcss": "^8.4.14",
-        "postcss-import": "^14.1.0",
-        "postcss-nested": "^5.0.6",
-        "postcss-preset-env": "^7.6.0",
-        "tailwindcss": "^3.0.24",
+        "laravel-vite-plugin": "^0.7.3",
+        "postcss": "^8.4.21",
+        "tailwindcss": "^3.2.4",
         "tailwindcss-debug-screens": "^2.2.1",
-        "@fontsource/mulish": "^4.5.10"
+        "vite": "^4.0.4"
     },
     "dependencies": {
-        "@alpinejs/collapse": "^3.10.2",
-        "alpinejs": "^3.10.2"
+        "@alpinejs/collapse": "^3.11.1",
+        "alpinejs": "^3.11.1"
     }
 }
