--- a/starter-kit.yaml
+++ b/starter-kit.yaml
@@ -11,6 +11,7 @@ export_paths:
   - content/collections/posts.yaml
   - content/collections/pages/home.md
   - content/collections/pages/contact.md
+  - config/statamic/antlers.php
   - config/statamic/cp.php
   - config/statamic/assets.php
   - resources/forms
@@ -21,15 +22,13 @@ export_paths:
   - resources/js
   - resources/views
   - routes/web.php
+  - public/build/
   - public/assets/favicons
   - public/assets/images
   - public/assets/logo.svg
-  - public/css
-  - public/js
-  - public/fonts
   - package.json
   - tailwind.config.js
-  - webpack.mix.js
+  - vite.config.js
   - CHANGELOG.md
   - README.md
 dependencies:
