--- a/starter-kit.yaml
+++ b/starter-kit.yaml
@@ -29,6 +29,7 @@ export_paths:
   - package.json
   - tailwind.config.js
   - vite.config.js
+  - postcss.config.js
   - CHANGELOG.md
   - README.md
 dependencies:
