--- a/content/trees/navigation/footer.yaml
+++ b/content/trees/navigation/footer.yaml
@@ -2,44 +2,45 @@ tree:
   -
     id: 753ba668-f8fa-438b-8c9a-f7cd529965e5
     title: Company
+    url: '#'
     children:
       -
         id: 0853598e-0a5f-48be-a702-4579aaeb4407
         title: About
-        url: /about
+        url: '#'
       -
         id: 8216f574-030e-4cc2-a465-2018a0fc5137
         title: Testimonials
-        url: /testimonials
+        url: '#'
       -
         id: 07c058bc-e6a1-4b3d-850f-5e06ca56d643
         title: 'Find a doctor'
-        url: /doctor
+        url: '#'
       -
         id: acaf05f4-0dee-4a15-a4d0-5684d95d10de
         title: Apps
-        url: /apps
+        url: '#'
   -
     id: 7dc89c2d-02e6-48cc-a0ec-264621d604e8
     title: Region
-    url: /region
+    url: '#'
     children:
       -
         id: 4fa5fd6c-19b6-4369-a05d-9092507c0410
         title: Indonesia
-        url: /indonesia
+        url: '#'
       -
         id: db77cd41-6c57-4354-9bbf-19fe4e148c67
         title: Singapore
-        url: /singapore
+        url: '#'
       -
         id: edcc0d4b-23e0-4247-b570-fe993bc09042
         title: 'Hong Kong'
-        url: /hong-kong
+        url: '#'
       -
         id: e68207d0-ff1d-47ff-b945-1fea5c38fc50
         title: Canada
-        url: /canada
+        url: '#'
   -
     id: 691aaff5-373e-435f-8f5c-c5b21e8d43b9
     title: Help
@@ -47,16 +48,16 @@ tree:
       -
         id: 6d97593f-5145-4c56-85aa-f17c7a27d251
         title: 'Help Center'
-        url: /help
+        url: '#'
       -
         id: 92de8473-d111-4e53-9b05-a9f32aaf0a7e
         title: 'Contact Support'
-        url: /support
+        url: '#'
       -
         id: 63d9c1c3-026b-48c2-95c6-468e1b2678ba
         title: Instructions
-        url: /instructions
+        url: '#'
       -
         id: ee39a467-e8f2-4744-93fe-5572222b315f
         title: 'How it works'
-        url: /how-it-works
+        url: '#'
