--- a/resources/blueprints/globals/theme.yaml
+++ b/resources/blueprints/globals/theme.yaml
@@ -1,246 +1,258 @@
-sections:
+tabs:
   main:
     display: General
-    fields:
+    sections:
       -
-        handle: sitename
-        field:
-          input_type: text
-          antlers: false
-          display: Sitename
-          type: text
-          icon: text
-          instructions: 'Used in the site title'
-          listable: hidden
-      -
-        handle: logo
-        field:
-          mode: grid
-          container: assets
-          restrict: false
-          allow_uploads: true
-          max_files: 1
-          display: Logo
-          type: assets
-          icon: assets
-          instructions: 'Logo that will be displayed through the website, **SVG** is preferred.'
-          width: 50
-          listable: hidden
+        fields:
+          -
+            handle: sitename
+            field:
+              input_type: text
+              antlers: false
+              display: Sitename
+              type: text
+              icon: text
+              instructions: 'Used in the site title'
+              listable: hidden
+          -
+            handle: logo
+            field:
+              mode: grid
+              container: assets
+              restrict: false
+              allow_uploads: true
+              max_files: 1
+              display: Logo
+              type: assets
+              icon: assets
+              instructions: 'Logo that will be displayed through the website, **SVG** is preferred.'
+              width: 50
+              listable: hidden
   favicon:
     display: Favicon
-    fields:
+    sections:
       -
-        handle: favicon
-        field:
-          mode: list
-          container: assets
-          folder: favicons
-          restrict: true
-          allow_uploads: true
-          show_filename: true
-          max_files: 1
-          display: Favicon
-          type: assets
-          icon: assets
-          instructions: 'Ico file for favicon'
-          listable: hidden
-      -
-        handle: favicon_256
-        field:
-          mode: list
-          restrict: true
-          allow_uploads: true
-          show_filename: true
-          display: 'Favicon 256'
-          type: assets
-          icon: assets
-          instructions: 'PNG Format preffered, 256x256'
-          listable: hidden
-          container: assets
-          folder: favicons
-          max_files: 1
-          validate:
-            - image
-      -
-        handle: favicon_192
-        field:
-          mode: list
-          restrict: true
-          allow_uploads: true
-          show_filename: true
-          display: 'Favicon 192'
-          type: assets
-          icon: assets
-          instructions: 'PNG Format preffered, 192x192'
-          listable: hidden
-          container: assets
-          folder: favicons
-          max_files: 1
-          validate:
-            - image
-      -
-        handle: favicon_180
-        field:
-          mode: list
-          restrict: true
-          allow_uploads: true
-          show_filename: true
-          display: 'Favicon 180'
-          type: assets
-          icon: assets
-          instructions: 'Apple Touch Icon, PNG Format preffered, 180x180'
-          listable: hidden
-          container: assets
-          folder: favicons
-          max_files: 1
-          validate:
-            - image
-      -
-        handle: favicon_32
-        field:
-          mode: list
-          restrict: true
-          allow_uploads: true
-          show_filename: true
-          display: 'Favicon 32'
-          type: assets
-          icon: assets
-          instructions: 'Icon, PNG Format preffered, 32x32'
-          listable: hidden
-          container: assets
-          folder: favicons
-          max_files: 1
-          validate:
-            - image
-      -
-        handle: favicon_16
-        field:
-          mode: list
-          restrict: true
-          allow_uploads: true
-          show_filename: true
-          display: 'Favicon 16'
-          type: assets
-          icon: assets
-          instructions: 'Icon, PNG Format preffered, 16x16'
-          listable: hidden
-          container: assets
-          folder: favicons
-          max_files: 1
-          validate:
-            - image
+        fields:
+          -
+            handle: favicon
+            field:
+              mode: list
+              container: assets
+              folder: favicons
+              restrict: true
+              allow_uploads: true
+              show_filename: true
+              max_files: 1
+              display: Favicon
+              type: assets
+              icon: assets
+              instructions: 'Ico file for favicon'
+              listable: hidden
+          -
+            handle: favicon_256
+            field:
+              mode: list
+              restrict: true
+              allow_uploads: true
+              show_filename: true
+              display: 'Favicon 256'
+              type: assets
+              icon: assets
+              instructions: 'PNG Format preffered, 256x256'
+              listable: hidden
+              container: assets
+              folder: favicons
+              max_files: 1
+              validate:
+                - image
+          -
+            handle: favicon_192
+            field:
+              mode: list
+              restrict: true
+              allow_uploads: true
+              show_filename: true
+              display: 'Favicon 192'
+              type: assets
+              icon: assets
+              instructions: 'PNG Format preffered, 192x192'
+              listable: hidden
+              container: assets
+              folder: favicons
+              max_files: 1
+              validate:
+                - image
+          -
+            handle: favicon_180
+            field:
+              mode: list
+              restrict: true
+              allow_uploads: true
+              show_filename: true
+              display: 'Favicon 180'
+              type: assets
+              icon: assets
+              instructions: 'Apple Touch Icon, PNG Format preffered, 180x180'
+              listable: hidden
+              container: assets
+              folder: favicons
+              max_files: 1
+              validate:
+                - image
+          -
+            handle: favicon_32
+            field:
+              mode: list
+              restrict: true
+              allow_uploads: true
+              show_filename: true
+              display: 'Favicon 32'
+              type: assets
+              icon: assets
+              instructions: 'Icon, PNG Format preffered, 32x32'
+              listable: hidden
+              container: assets
+              folder: favicons
+              max_files: 1
+              validate:
+                - image
+          -
+            handle: favicon_16
+            field:
+              mode: list
+              restrict: true
+              allow_uploads: true
+              show_filename: true
+              display: 'Favicon 16'
+              type: assets
+              icon: assets
+              instructions: 'Icon, PNG Format preffered, 16x16'
+              listable: hidden
+              container: assets
+              folder: favicons
+              max_files: 1
+              validate:
+                - image
   pagenotfound:
     display: '404 Page'
-    fields:
+    sections:
       -
-        handle: page_title
-        field:
-          input_type: text
-          antlers: false
-          default: 'Page not found'
-          display: 'Page Heading'
-          type: text
-          icon: text
-          listable: hidden
-          instructions_position: above
-          validate:
-            - required
-      -
-        handle: page_desc
-        field:
-          always_show_set_button: false
-          buttons:
-            - bold
-            - italic
-            - anchor
-          save_html: false
-          toolbar_mode: fixed
-          link_noopener: true
-          link_noreferrer: true
-          target_blank: false
-          reading_time: false
-          fullscreen: true
-          allow_source: true
-          enable_input_rules: true
-          enable_paste_rules: true
-          antlers: false
-          display: 'Page Description'
-          type: bard
-          icon: bard
-          listable: hidden
-          instructions_position: above
-          read_only: false
-          container: assets
+        fields:
+          -
+            handle: page_title
+            field:
+              input_type: text
+              antlers: false
+              default: 'Page not found'
+              display: 'Page Heading'
+              type: text
+              icon: text
+              listable: hidden
+              instructions_position: above
+              validate:
+                - required
+          -
+            handle: page_desc
+            field:
+              always_show_set_button: false
+              buttons:
+                - bold
+                - italic
+                - anchor
+              save_html: false
+              toolbar_mode: fixed
+              link_noopener: true
+              link_noreferrer: true
+              target_blank: false
+              reading_time: false
+              fullscreen: true
+              allow_source: true
+              enable_input_rules: true
+              enable_paste_rules: true
+              antlers: false
+              display: 'Page Description'
+              type: bard
+              icon: bard
+              listable: hidden
+              instructions_position: above
+              container: assets
   footer:
     display: Footer
-    fields:
+    sections:
       -
-        handle: show_logo
-        field:
-          display: 'Show Logo'
-          type: toggle
-          icon: toggle
-          instructions: 'Enable this to show logo on footer'
-          width: 50
-          listable: hidden
-      -
-        handle: footer_copyright
-        field:
-          input_type: text
-          antlers: false
-          display: 'Footer Copyright'
-          type: text
-          icon: text
-          listable: hidden
-      -
-        handle: footer_description
-        field:
-          antlers: false
-          display: 'Footer Description'
-          type: textarea
-          icon: textarea
-          instructions: 'Used in the footer under the logo'
-          listable: hidden
+        fields:
+          -
+            handle: show_logo
+            field:
+              display: 'Show Logo'
+              type: toggle
+              icon: toggle
+              instructions: 'Enable this to show logo on footer'
+              width: 50
+              listable: hidden
+          -
+            handle: footer_copyright
+            field:
+              input_type: text
+              antlers: true
+              display: 'Footer Copyright'
+              type: text
+              icon: text
+              listable: hidden
+              instructions_position: above
+              visibility: visible
+              hide_display: false
+          -
+            handle: footer_description
+            field:
+              antlers: false
+              display: 'Footer Description'
+              type: textarea
+              icon: textarea
+              instructions: 'Used in the footer under the logo'
+              listable: hidden
   sitemap:
     display: Sitemap
-    fields:
+    sections:
       -
-        handle: sitemap_collections
-        field:
-          mode: select
-          display: 'Sitemap Collections'
-          type: collections
-          icon: collections
-          listable: hidden
-      -
-        handle: sitemap_change_frequency
-        field:
-          options:
-            always: Always
-            hourly: Hourly
-            daily: Daily
-            weekly: Weekly
-            monthly: Monthly
-            yearly: Yearly
-            never: Never
-          clearable: false
-          multiple: false
-          searchable: true
-          taggable: false
-          push_tags: false
-          cast_booleans: false
-          type: select
-          instructions: 'How often to instruct search engines to crawl.'
-          width: 50
-          default: weekly
-          listable: hidden
-          display: 'Change frequency'
-      -
-        handle: sitemap_priority
-        field:
-          type: text
-          display: Priority
-          default: 0.5
-          instructions: 'Valid values range from 0.0 to 1.0. This value does not affect how your pages are compared to pages on other sites, it only lets the search engines know which pages you deem most important for the crawlers.'
-          width: 50
-          listable: hidden
+        fields:
+          -
+            handle: sitemap_collections
+            field:
+              mode: select
+              display: 'Sitemap Collections'
+              type: collections
+              icon: collections
+              listable: hidden
+          -
+            handle: sitemap_change_frequency
+            field:
+              options:
+                always: Always
+                hourly: Hourly
+                daily: Daily
+                weekly: Weekly
+                monthly: Monthly
+                yearly: Yearly
+                never: Never
+              clearable: false
+              multiple: false
+              searchable: true
+              taggable: false
+              push_tags: false
+              cast_booleans: false
+              type: select
+              instructions: 'How often to instruct search engines to crawl.'
+              width: 50
+              default: weekly
+              listable: hidden
+              display: 'Change frequency'
+          -
+            handle: sitemap_priority
+            field:
+              type: text
+              display: Priority
+              default: 0.5
+              instructions: 'Valid values range from 0.0 to 1.0. This value does not affect how your pages are compared to pages on other sites, it only lets the search engines know which pages you deem most important for the crawlers.'
+              width: 50
+              listable: hidden
