--- a/resources/blueprints/collections/pages/pages.yaml
+++ b/resources/blueprints/collections/pages/pages.yaml
@@ -48,7 +48,7 @@ sections:
           localizable: true
           validate:
             - required
-            - 'unique_entry_value:{collection},{id},{site}'
+            - 'new \Statamic\Rules\UniqueEntryValue({collection}, {id}, {site})'
   seo:
     display: SEO
     fields:
