--- a/starter-kit.yaml
+++ b/starter-kit.yaml
@@ -12,9 +12,9 @@ export_paths:
   - content/collections/posts.yaml
   - content/collections/pages/home.md
   - content/collections/pages/contact.md
-  - config/statamic/antlers.php
   - config/statamic/cp.php
   - config/statamic/assets.php
+  - resources/sites.yaml
   - resources/forms
   - resources/fieldsets
   - resources/blueprints
@@ -26,6 +26,7 @@ export_paths:
   - public/build/
   - public/assets/favicons
   - public/assets/images
+  - public/assets/profile
   - public/assets/logo.svg
   - package.json
   - tailwind.config.js
